linksharing: fix map width on mobile

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -198,7 +198,6 @@ p, span, a {
 
 .map {
   width: 100%;
-  height: 350px;
   background: #fff !important;
   pointer-events: none;
 }
